--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -20,6 +20,7 @@ jobs:
         aws-s3-bucket: ${{ secrets.AWS_S3_BUCKET }}
         aws-access-key-id: ${{ secrets.AWS_ACCESS_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ secrets.AWS_REGION }}
         
     
     - name: Deploy to AWS S3
